fixed aligning issues

--- a/reactApp/src/Components/TextEditor/textEditor.less
+++ b/reactApp/src/Components/TextEditor/textEditor.less
@@ -57,3 +57,13 @@
     height: 1000px;
   }
 }
+
+.align-right div {
+  text-align: right;
+}
+.align-center div {
+  text-align: center;
+}
+.align-left div {
+  text-align: left;
+}
